==> MikroElektronika/mikrosdk_v2/targets/arm/mikroe/renesas/src/uart/implementation_2/hal_ll_uart.c <==
#include "hal_ll_uart.h"
#include "hal_ll_gpio.h"
#include "hal_ll_core.h"
#include "hal_ll_mstpcr.h"
#include "hal_ll_core_defines.h"
#include "hal_ll_uart_pin_map.h"
#define hal_ll_uart_get_module_state_address ((hal_ll_uart_handle_register_t *)*handle)
#define hal_ll_uart_get_handle (hal_ll_uart_handle_register_t *)hal_ll_uart_get_module_state_address->hal_ll_uart_handle
#define hal_ll_uart_get_base_struct(_handle) ((hal_ll_uart_base_handle_t *)_handle)
#define hal_ll_uart_get_base_from_hal_handle ((hal_ll_uart_hw_specifics_map_t *)((hal_ll_uart_handle_register_t *)\
                                             (((hal_ll_uart_handle_register_t *)(handle))->hal_ll_uart_handle))->hal_ll_uart_handle)->base
#define hal_ll_uart_get_status_flags(_handle,_flag) (((hal_ll_uart_base_handle_t *)_handle)->mis & _flag)
#define hal_ll_uart_clear_status_flag(_handle,_flag) (set_reg_bit(&(((hal_ll_uart_base_handle_t *)_handle)->icr), _flag))
#define hal_ll_sci_brr_assert_divisors(is_base_16, i)   \
                                    (is_base_16  ^ (g_async_baud[i].abcs | g_async_baud[i].abcse))
#define hal_ll_sci_brr_calculate(baud, pclka, i) (pclka / (g_div_coefficient[i] * baud))
#define hal_ll_sci_brr_get_error(brr, pclka, baud, i) \
    (int32_t)(((((int64_t)pclka) * HAL_LL_SCI_BRR_ERROR_REFERENCE) / \
    (g_div_coefficient[i] * baud * (brr + 1))) - HAL_LL_SCI_BRR_ERROR_REFERENCE)
#define hal_ll_sci_get_baud_rate(pclka, brr, i) (pclka / ((brr + 1) * g_div_coefficient[i]))

void hal_ll_uart_irq_enable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;


    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            set_reg_bit( &hal_ll_hw_reg->ccr0, HAL_LL_SCI_CCR0_RIE );
            break;
        case HAL_LL_UART_IRQ_TX:
            /*
            * Note: In Hardware Manual for RA8M1 in 32.1.5 TIE bit (Transmit Interrupt Enable)
            * paragraph it is said: "At the beginning of transmission, set 1 to CCR0.TE and
            * CCR0.TIE simultaneously. The SCIn_TXI interrupt request is then generated.
            *
            * In order to set TE bit in SCI SCR register we need first to clear it as it was set during
            * the initialization process.
            */
            clear_reg_bit( &hal_ll_hw_reg->ccr0, HAL_LL_SCI_CCR0_TE );
            set_reg_bits( &hal_ll_hw_reg->ccr0, HAL_LL_SCI_TXI_ENABLE_MASK );
            break;

        default:
            break;

    }
}

void hal_ll_uart_irq_disable( handle_t *handle, hal_ll_uart_irq_t irq ) {
    low_level_handle = hal_ll_uart_get_handle;
    hal_ll_uart_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_uart_get_module_state_address );

    hal_ll_uart_base_handle_t *hal_ll_hw_reg = ( hal_ll_uart_base_handle_t *)hal_ll_uart_hw_specifics_map_local->base;

    switch ( irq ) {
        case HAL_LL_UART_IRQ_RX:
            clear_reg_bit( &hal_ll_hw_reg->ccr0, HAL_LL_SCI_CCR0_RIE );
            break;
        case HAL_LL_UART_IRQ_TX:
            clear_reg_bits( &hal_ll_hw_reg->ccr0, HAL_LL_SCI_TXI_ENABLE_MASK );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_clock( hal_ll_uart_hw_specifics_map_t *map, bool hal_ll_state ) {
        switch ( map->module_index ) {
        #ifdef UART_MODULE_0
        case ( hal_ll_uart_module_num( UART_MODULE_0 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB31_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB31_POS ));
            break;
        #endif
        #ifdef UART_MODULE_1
        case ( hal_ll_uart_module_num( UART_MODULE_1 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB30_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB30_POS ));
            break;
        #endif
        #ifdef UART_MODULE_2
        case ( hal_ll_uart_module_num( UART_MODULE_2 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB29_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB29_POS ));
            break;
        #endif
        #ifdef UART_MODULE_3
        case ( hal_ll_uart_module_num( UART_MODULE_3 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB28_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB28_POS ));
            break;
        #endif
        #ifdef UART_MODULE_4
        case ( hal_ll_uart_module_num( UART_MODULE_4 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB27_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB27_POS ));
            break;
        #endif
        #ifdef UART_MODULE_5
        case ( hal_ll_uart_module_num( UART_MODULE_5 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB26_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB26_POS ));
            break;
        #endif
        #ifdef UART_MODULE_6
        case ( hal_ll_uart_module_num( UART_MODULE_6 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB25_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB25_POS ));
            break;
        #endif
        #ifdef UART_MODULE_7
        case ( hal_ll_uart_module_num( UART_MODULE_7 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB24_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB24_POS ));
            break;
        #endif
        #ifdef UART_MODULE_8
        case ( hal_ll_uart_module_num( UART_MODULE_8 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB23_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB23_POS ));
            break;
        #endif
        #ifdef UART_MODULE_9
        case ( hal_ll_uart_module_num( UART_MODULE_9 )):
            ( hal_ll_state == false ) ? ( set_reg_bit( _MSTPCRB, MSTPCRB_MSTPB22_POS )) : ( clear_reg_bit( _MSTPCRB, MSTPCRB_MSTPB22_POS ));
            break;
        #endif

        default:
            break;
    }
}

static void hal_ll_uart_set_baud_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    /* Find the best BRR (bit rate register) value.
     *  In table g_async_baud, divisor values are stored for BGDM, ABCS, ABCSE and N values. Each set of divisors
     *  is tried, and the settings with the lowest bit rate error are stored. The formula to calculate BRR is as
     *  follows and it must be 255 or less:
     *  BRR = (PCLKA / (div_coefficient * baud)) - 1
     */
    uint32_t error = HAL_LL_SCI_BRR_ERROR_REFERENCE;
    uint32_t temp_brr, divisor = 0U;
    uint8_t abcse2, abcse, abcs, bgdm, brr, cks;
    int32_t err_divisor, current_error;
    uint32_t source_clock = hal_ll_uart_get_clock_speed( );

    for ( uint8_t select_16_base_clk_cycles = 0U;
          (( 1 >= select_16_base_clk_cycles ) && ( HAL_LL_SCI_BRR_ERROR_ACCEPTABLE < error ));
          select_16_base_clk_cycles++ )
    {
        for ( uint8_t i = 0U; HAL_LL_SCI_NUM_DIVISORS > i ; i++ )
        {
            if ( hal_ll_sci_brr_assert_divisors( select_16_base_clk_cycles, i ))
            {
                continue;
            }

            temp_brr = hal_ll_sci_brr_calculate( map->baud_rate.baud, source_clock, i );

            if (( HAL_LL_SCI_BRR_MAX ) >= temp_brr )
            {
                while ( temp_brr-- > 0U )
                {
                    current_error = hal_ll_sci_brr_get_error( temp_brr, source_clock, map->baud_rate.baud, i );

                    /* Take the absolute value of the bit rate error. */
                    if ( current_error < 0 )
                    {
                        current_error = -current_error;
                    }

                    /* If the absolute value of the bit rate error is less than the previous lowest absolute value of
                     *  bit rate error, then store these settings as the best value.
                     */
                    if ( current_error < error )
                    {
                        bgdm  = g_async_baud[i].bgdm;
                        abcs  = g_async_baud[i].abcs;
                        abcse = g_async_baud[i].abcse;
                        abcse2 = g_async_baud[i].abcse2;
                        cks = g_async_baud[i].cks;
                        brr = ( uint8_t ) temp_brr;
                        error = current_error;
                        map->baud_rate.real_baud = hal_ll_sci_get_baud_rate( source_clock, brr ,i );
                    }
                }
            }
        }
    }

    clear_reg_bits( &hal_ll_hw_reg->ccr2, HAL_LL_SCI_CCR2_BPS_CONFIG_BITS_MASK );
    set_reg_bits( &hal_ll_hw_reg->ccr2, HAL_LL_SCI_CCR2_CONFIGURE( bgdm, abcs, abcse, abcse2 ));

    clear_reg_bits(  &hal_ll_hw_reg->ccr2, HAL_LL_SCI_CCR2_CKS_MASK );
    set_reg_bits( &hal_ll_hw_reg->ccr2, cks << HAL_LL_SCI_CCR2_CKS );

    clear_reg_bits( &hal_ll_hw_reg->ccr2, HAL_LL_SCI_CCR2_BRR_MASK );
    set_reg_bits( &hal_ll_hw_reg->ccr2, brr << HAL_LL_SCI_CCR2_BRR );
}

static uint32_t hal_ll_uart_get_clock_speed( void ) {
    system_clocks_t system_clocks;
    uint32_t pclk_value;

    SYSTEM_GetClocksFrequency( &system_clocks );

    pclk_value = system_clocks.SCICLK;

    return pclk_value;
}

static void hal_ll_uart_set_data_bits_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    switch ( map->data_bit )
    {
        case HAL_LL_UART_DATA_BITS_7:
            set_reg_bits( &hal_ll_hw_reg->ccr3, HAL_LL_SCI_CCR3_CHR_7BITS );
            break;
        case HAL_LL_UART_DATA_BITS_8:
            set_reg_bits( &hal_ll_hw_reg->ccr3, HAL_LL_SCI_CCR3_CHR_8BITS );
            break;
        case HAL_LL_UART_DATA_BITS_9:
            set_reg_bits( &hal_ll_hw_reg->ccr3, HAL_LL_SCI_CCR3_CHR_9BITS );

            break;

        default:
            break;
    }
}

static void hal_ll_uart_set_parity_bare_metal( hal_ll_uart_hw_specifics_map_t *map ) {
    hal_ll_uart_base_handle_t *hal_ll_hw_reg = hal_ll_uart_get_base_struct( map->base );

    switch ( map->parity )
    {
        case HAL_LL_UART_PARITY_NONE:
            clear_reg_bit( &hal_ll_hw_reg->ccr1, HAL_LL_SCI_CCR1_PE );
            break;
        case HAL_LL_UART_PARITY_EVEN:
            set_reg_bit( &hal_ll_hw_reg->ccr1, HAL_LL_SCI_CCR1_PE );
            break;
        case HAL_LL_UART_PARITY_ODD:
            set_reg_bit( &hal_ll_hw_reg->ccr1, HAL_LL_SCI_CCR1_PE );
            set_reg_bit( &hal_ll_hw_reg->ccr1, HAL_LL_SCI_CCR1_PM );
            break;

        default:
            break;
    }
}

static void hal_ll_uart_clear_regs( hal_ll_uart_base_handle_t *hal_ll_hw_reg ) {
    clear_reg( &hal_ll_hw_reg->ccr0 );
    while ( read_reg( &hal_ll_hw_reg->ccr0 ));
}
